spam no spam demo with events

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -160,7 +160,8 @@
         { title: 'Explore CSX', link: 'https://https://www.csx.com/' },
         { title: 'Working At CSX', link: 'https://www.csx.com/index.cfm/working-at-csx/' },
         { title: 'Management Team', link: 'https://www.csx.com/index.cfm/about-us/company-overview/csx-leadership/management-team/' },
-        { title: 'Demo', link: '/demo' }
+        { title: 'Demo', link: '/demo' },
+        { title: 'Demo 2', link: '/demo2' }
       ]; track item.title) {
         <a
           class="pill"
