--- a/src/app/iraildemo2/iraildemo2.component.html
+++ b/src/app/iraildemo2/iraildemo2.component.html
@@ -81,6 +81,14 @@
     .pill-group svg {
       margin-inline-start: 0.25rem;
     }
+    .grid-container {
+      display: grid;
+      grid-template-columns: auto auto;
+    }
+    .grid-label {
+      text-align: right;
+      margin-right: 20px;
+    }
 </style>
 <div class="content styled-bg">
     <div>
@@ -124,7 +132,7 @@
         <mat-card-content>
           <form class="example-form">
             <mat-form-field class="example-full-width">
-              <mat-label>From</mat-label>
+              <mat-label>Analyze Message</mat-label>
               <input type="text"
                      placeholder="Enter"
                      aria-label="Analyze Message"
@@ -141,7 +149,7 @@
           <div class="route-info-container" *ngIf="messages.length > 0">
             <h3>Messages Analysis</h3>
             <span class="connection-span">You have {{messages.length}} messages.</span>
-            <table mat-table [dataSource]="messages" class="mat-elevation-z8">
+            <table mat-table [dataSource]="messages" class="mat-elevation-z8" multiTemplateDataRows>
               <ng-container matColumnDef="message">
                 <th mat-header-cell *matHeaderCellDef> Message </th>
                 <td mat-cell *matCellDef="let element"> {{element.message}} </td>
@@ -151,31 +159,38 @@
                 <td mat-cell *matCellDef="let element"> {{element.spamOrNot}} </td>
               </ng-container>              
               <ng-container matColumnDef="kafkaTopic">
-                <th mat-header-cell *matHeaderCellDef> K-Topic </th>
+                <th mat-header-cell *matHeaderCellDef> Kafka Topic </th>
                 <td mat-cell *matCellDef="let element"> {{element.kafkaTopic}} </td>
               </ng-container>              
               <ng-container matColumnDef="kafkaPartition">
-                <th mat-header-cell *matHeaderCellDef> K-Partition </th>
+                <th mat-header-cell *matHeaderCellDef> Kafka Partition </th>
                 <td mat-cell *matCellDef="let element"> {{element.kafkaPartition}} </td>
               </ng-container>              
               <ng-container matColumnDef="kafkaOffset">
-                <th mat-header-cell *matHeaderCellDef> K-Offset </th>
+                <th mat-header-cell *matHeaderCellDef> Kafka Offset </th>
                 <td mat-cell *matCellDef="let element"> {{element.kafkaOffset}} </td>
               </ng-container>              
-              <ng-container matColumnDef="rabbitId">
-                <th mat-header-cell *matHeaderCellDef> Rabbit Id </th>
-                <td mat-cell *matCellDef="let element"> {{element.rabbitId}} </td>
-              </ng-container>              
-              <ng-container matColumnDef="rabbitQueue">
-                <th mat-header-cell *matHeaderCellDef> R-Queue </th>
-                <td mat-cell *matCellDef="let element"> {{element.rabbitQueue}} </td>
-              </ng-container>              
-              <ng-container matColumnDef="rabbitTime">
-                <th mat-header-cell *matHeaderCellDef> Time </th>
-                <td mat-cell *matCellDef="let element"> {{element.rabbitTime}} </td>
-              </ng-container>              
+              <ng-container matColumnDef="secondary">
+                <td mat-cell [attr.colspan]="displayedColumns.length" *matCellDef="let element">
+                  <div class="grid-container">
+                    <div class="grid-label">RMQ Processor Id:</div>
+                    <div>{{element.processorId}}</div>
+                    <div class="grid-label">RMQ Processor Queue:</div>
+                    <div>{{element.processorQueue}}</div>
+                    <div class="grid-label">RMQ Processor Time:</div>
+                    <div>{{element.processorTime}}</div>
+                    <div class="grid-label">RMQ Receiver Id:</div>
+                    <div>{{element.receiverId}}</div>
+                    <div class="grid-label">RMQ Receiver Queue:</div>
+                    <div>{{element.receiverQueue}}</div>
+                    <div class="grid-label">RMQ Receiver Time:</div>
+                    <div>{{element.receiverTime}}</div>
+                  </div>
+                </td>
+              </ng-container>             
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>       
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> 
+              <tr mat-row *matRowDef="let row; columns: ['secondary'];"></tr>   
             </table>
           </div>
           </mat-card-content>
